--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
   <title>HackOverflow workshop</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
+  <script src="js/main.js"></script>
 </head>
 
 <body>
