Add Bootstrap template page

--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,15 @@
 
 <body>
   <h1>Hello world!</h1>
-  <p>Off to a great start.</p>
+  <p>Off to a great start. Remove all this and make it your own!</p>
+  
+  <h3>Don't know how?</h3>
+  <p>Get started <a href="http://www.swestwood.com/p/web-tutorial.html">learning web programming</a>!</p>
+
+  <p>You can also check out the <a href="bootstrap-template.html">Bootstrap template</a>.</p>
+
   <img src="images/hackoverflow.png">
+
+  <p><a href="https://github.com/swestwood/hackoverflow-workshop">Where it all began</a></p>
 </body>
 </html>
