--- a/public/stylesheets/demo.css
+++ b/public/stylesheets/demo.css
@@ -1,9 +1,1 @@
-body {
-  padding: 0px 60px;
-  font-family: "Arial", "sans-serif";
-}
-
-h1 {
-  color: purple;
-  font-size: 80px;
-}
+// Nothing yet!
