Add Firebase demo to index page

--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
   <h3>Don't know how?</h3>
   <p>Get started <a href="http://www.swestwood.com/p/web-tutorial.html">learning web programming</a>!</p>
 
-  <p>You can also check out the <a href="bootstrap-template.html">Bootstrap template</a>.</p>
+  <p>You can also check out the <a href="bootstrap-template.html">Bootstrap template</a> and <a href="firebase-demo.html">Firebase demo</a>.</p>
 
   <img src="images/hackoverflow.png">
 
