--- a/views/firebase-demo.html
+++ b/views/firebase-demo.html
@@ -10,14 +10,38 @@
 
 <body>
 <div class="example-chat">
-  <header>Firebase Chat Demo</header>
+  <h1>Firebase Demo</h1>
 
+  <h3>Chat</h3>
   <div class="example-chat-toolbar">
     <p>Name: <input type="text" class="name-input" placeholder="Enter your name..."></p>
     <input type="text" class="message-input"  placeholder="Type a message...">
   </div>
 
   <ul class="message-list"></ul>
+  <p><i>Modified from the Firebase <a href="https://www.firebase.com/tutorial/#gettingstarted">tutorial</a></i></p>
+
+  <h3>Counter</h3>
+  <div>
+    <button class="counter-button">Click me!</button>
+    <p>I've been clicked <span class="counter-hits"></span> times!</p>
+  </div>
+
+  <h3>Ideas for extensions</h3>
+  <p><a href="https://www.firebase.com/docs/web/examples.html">More examples</a></p>
+  <ul>
+    <li>Make a voting system!</li>
+    <li>Group habit tracking</li>
+    <li>Flashcards</li>
+    <li>Bill splitting</li>
+    <li>Game!!</li>
+    <li>Anything collaborative :)</li>
+  </ul>
+</div>
+
+<h3>Rectangle</h3>
+<div class="rectangle-container">
+  <div class="rectangle">I'm a rectangle!</div>
 </div>
 <script src="js/firebase-demo.js"></script>
 </body>
