--- a/views/bootstrap-template.html
+++ b/views/bootstrap-template.html
@@ -5,7 +5,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"/>
-  <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap-template.css" />
 </head>
 
 <body role="document">
@@ -605,6 +605,6 @@
       </div>
     </div> <!-- /container -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="js/bootstrap-template.js"></script>
   </body>
 </html>
