Update rectangle demo

--- a/views/firebase-demo.html
+++ b/views/firebase-demo.html
@@ -41,7 +41,7 @@
 
 <h3>Rectangle</h3>
 <div class="rectangle-container">
-  <div class="rectangle">I'm a rectangle!</div>
+  <div class="rectangle">I move when you click!</div>
 </div>
 <script src="js/firebase-demo.js"></script>
 </body>
